# notificauai

./: .env  .gitignore  config_novo.py  db.sqlite3  main.py  pyproject.toml
apps/accounts/: admin.py  managers.py  models.py  signals.py  urls.py  utils.py
apps/accounts/forms/: __init__.py  login_form.py  password_forms.py  profile_form.py  register_form.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_userprofile_options_and_more.py
apps/accounts/services/: __init__.py  auth.py
apps/accounts/views/: auth.py
apps/integrations/: admin.py  apps.py  models.py  urls_api.py  urls_ui.py  views.py
apps/integrations/migrations/: 0001_initial.py  0002_nuvemshopintegration.py  0002_whatsappintegration.py  0003_alter_whatsappintegration_phone_number.py  0003_integration_name_webhookevent.py  0004_nuvemshopintegration_store_document_and_more.py  0004_whatsappintegration_access_token_wa_business_and_more.py  0005_nuvemshopintegration_webhook_url.py  0006_alter_nuvemshopintegration_store_id.py  0007_alter_nuvemshopintegration_store_id.py
apps/orders/: admin.py  models.py  tests.py  urls_ui.py
apps/orders/migrations/: 0001_initial.py  0002_order_shipping_carrier_order_tracking_code_and_more.py  0003_alter_order_tracking_code.py  (+7 more)
apps/workspaces/: admin.py  exceptions.py  models.py
common/: exceptions.py
common/parsers/: base_parser.py
common/services/: workspace_service.py
common/utils/: generate_uuid.py  messages.py  redirects.py  responses.py
core/: model.py  models.py  settings.py  urls.py
templates/base/: base.html
(+53 files in other folders)
