[project]
name = "notificauai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "nuvemshop-client-python==0.2.5",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "requests>=2.32.4",
]
